--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ starknet-core = { version = "0.5.0", default-features = false }
 starknet-ff = { version = "0.3.4", default-features = false }
 sp-io = { version = "23.0.0", git = "https://github.com/paritytech/substrate.git", default-features = true, branch = "polkadot-v1.0.0" }
 clap = "2.33"
+chrono = "0.4.37"
 
 [features]
 default = ["std"]
